--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -711,7 +711,7 @@ is straightforward to show that for the more general kinetic function this expre
 % \end{equation}
 % % 
 
-\subsection{A more general BM bound}
+\subsection{A More General BM Bound}
 
 The BM bound \eqref{eq:BMboundr} restricts the maximal 
 variation of the scalar field $\varphi$ in the full throat region for DBI inflation. 
@@ -832,7 +832,7 @@ tensor-scalar ratio will be compatible if \eq{eq:evade} is satisfied. For IR mod
 bounds on $r$ have been found, which when combined constrain $f_B$ as in \eq{eq:f2IRlower}. This
 constraint will prove useful in Section~\ref{sec:ir-largen-bound-multi}.
 
-\subsection{The new upper bound for general models}
+\subsection{The New Upper Bound for General Models}
 
 The newly derived upper bound on $r$ for DBI models, \eq{eq:generalbound}, arises 
 because the warp factor in standard DBI models 
