--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -623,7 +623,7 @@ could be as high as $(60/4)^2 \simeq 200 $, leading to $n$ being less than $15$.
 the assumption of large $n$ would clearly be inconsistent and the model would be ruled out. 
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
-\subsection{Bound on D3 charge at the tip of the throat}
+\subsection{Bound on D3 Charge at the Tip of the Throat}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
 Since the branes are initially located at the tip of the 
