--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -499,7 +499,7 @@ a ${\rm D5}$-brane which is wrapped around a two-cycle
 of the throat \cite{dual1,dual2,dual3}. 
 
 % % % % % % % % % % % % % % % % % % % % % % % % 
-\subsection{\texorpdfstring{Bound on $n$ during IR propagation}{Bound on n during IR propagation}}
+\subsection{Bound on \texorpdfstring{$n$}{n} during IR Propagation}
 \label{sec:ir-largen-bound-multi}
 % % % % % % % % % % % % % % % % % % % % % % % % 
 
