--- a/numerical/results.tex
+++ b/numerical/results.tex
@@ -329,6 +329,39 @@ exited the horizon.}
 % 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+\subsection{Comparison of \texorpdfstring{$V(\vp)=\msqphisq$}{m-squared Model} Results with Analytic
+Solution}
+\label{sec:analytic-res}
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+% =========================================================== %
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+In this section results for the quadratic model will be compared with an analytic solution for this
+model. However, an analytic result is difficult to obtain for the case of the full first
+order solution in terms of Hankel functions with the phase information included. The analytic
+solution we will use, therefore, is the non-interacting de Sitter
+space solution with the phase information ignored. The first order perturbations are then given by
+% 
+\begin{equation}
+ \dvp1(\eta, \kvi) = \frac{1}{a\sqrt{2 k}} \left( 1 - \frac{i}{k \eta}\right) \,,
+\end{equation}
+% 
+and the derivative in terms of $\N$ is 
+% 
+\begin{equation}
+ \dN{\dvp1}(\eta, \kvi) = -  \frac{1}{a\sqrt{2 k}} \left( 1 -
+                        \frac{i}{k \eta}\right) \left(1 + \frac{1}{aH\eta}\right)
+                         - \frac{i}{a^2 H \sqrt{2}}\sqrt{k}\,.
+\end{equation}
+% 
+
+The source term is found using \eq{eq:KG2-source-ntime} and the values of the background
+quantities. The analytic solution of \eq{eq:KG2-source-ntime} for this choice of first order
+solution is given in Appendix~\ref{sec:analyticsrc-apx} in Eqs. (\ref{}-\ref{}).
+
+  
 
 
 
