--- a/thesis.tex
+++ b/thesis.tex
@@ -20,10 +20,11 @@ onehalfspacing % onehalfspacing or doublespacing
 % CVSon for cvs revision number in footers
 % CVSoff is default-
 \usepackage[%CVSon, % CVS version in footers
-            %labels, % show labels
+            labels, % show labels
 	    %todos, % show todos
-            %hyperref % Use hyperref for links
+            hyperref % Use hyperref for links
             ]{ihformat}
+
 
 % Redefine CVSRevision for this section
 \renewcommand{\CVSrevision}{\version$Id: thesis.tex,v 1.43 2009/11/26 16:29:09 ith Exp $}
