--- a/appendix.tex
+++ b/appendix.tex
@@ -626,8 +626,81 @@ i \eta  \kmin-126\right) k \\
 -40 \kmin \left(3516 \eta ^2\kmin^2-9247 i \eta\kmin-8673\right) k^3 \\
 -48 \kmin^2 \left(1360 \eta^2 \kmin^2+15155 i \eta\kmin+22442\right) k^2 
 +64 \kmin^3 \left(600\eta ^2 \kmin^2+3710 i \eta\kmin+5733\right) k \\
-+256 \kmin^4 \left(300 \eta ^2\kmin^2-2555 i \eta\kmin-2646\right)\Bigg)\Bigg\}
++256 \kmin^4 \left(300 \eta ^2\kmin^2-2555 i \eta\kmin-2646\right)\Bigg)\Bigg\}\,.
 \end{multline}
+
+The analytic solution for $J_{\wt{\C}}$ is 
+% 
+\begin{multline}
+ J_{\wt{\C}} = -8\pi G \dN{\vp_{0}} \frac{3}{2} \frac{\alpha ^2 }{14400 \beta ^2 \eta ^4 k}
+\Bigg\{-15 k \arctan\left(\sqrt{\frac{\kmin}{k-\kmin}}\right)
+   \Bigg(9 \eta ^4 k^4-60 i \eta ^3 k^3-560 \eta ^2 k^2 \\
++960 i \eta  k-80 \beta ^2 \eta ^2 \left(\eta ^2 k^2-12 i \eta  k-24\right) 
++20 \beta  \eta\left(-3 i \eta ^3 k^3-32 \eta ^2 k^2+96 i \eta k+192\right)+1920\Bigg)
+\displaybreak[0]\\
+% 
++\frac{15}{2} k \pi  \Bigg(9 \eta ^4 k^4-60 i \eta ^3 k^3-560 \eta ^2
+k^2+960 i
+   \eta  k-80 \beta ^2 \eta ^2 \left(\eta ^2 k^2-12 i \eta  k-24\right) \\
++20 \beta  \eta  \left(-3 i\eta ^3 k^3-32 \eta ^2 k^2+96 i \eta  k+192\right)+1920\Bigg)
+\displaybreak[0]\\
+% 
+-\sqrt{\kmax (\kmax-k)} \Bigg(9 \left(15 k^4+10 \kmax k^3-248 \kmax^2 k^2+336 \kmax^3 k
+-128\kmax^4\right) \eta ^4 \\
++3840 i (k-\kmax)^2 \kmax \eta ^3 +80 \left(69 k^2-178 \kmax k+184 \kmax^2\right) \eta ^2 \\ 
++400 \beta ^2 \left(\left(3 k^2-14 \kmax k+8 \kmax^2\right) \eta^2 
++48 i (k-\kmax) \eta -72\right)\eta ^2+19200 i (k-\kmax) \eta \\
++320 \beta  \Bigg[12 i   (k-\kmax)^2 \kmax \eta ^3+\left(21 k^2-62 \kmax k+56 \kmax^2\right) \eta
+^2 \\
++120 i(k-\kmax) \eta  -180\Bigg] \eta -28800\Bigg) \displaybreak[0] \\
+% 
++\sqrt{\kmax (k+\kmax)} \Bigg(9\left(15 k^4-10 \kmax k^3-248 \kmax^2 k^2-336 \kmax^3 k-128
+\kmax^4\right) \eta ^4 \\
++3840 i \kmax (k+\kmax)^2 \eta ^3+80 \left(69 k^2+178 \kmax k+184 \kmax^2\right)\eta^2 \\
++400 \beta^2 \left(\left(3 k^2+14 \kmax k+8 \kmax^2\right) \eta ^2 -48 i (k+\kmax)
+   \eta -72\right) \eta ^2 \\
+-19200 i (k+\kmax) \eta +320 \beta  \Bigg[12 i \kmax
+(k+\kmax)^2 \eta ^3+\left(21 k^2+62 \kmax k+56 \kmax^2\right) \eta ^2 \\
+-120 i (k+\kmax) \eta -180\Bigg] \eta -28800\Bigg) \displaybreak[0] \\
+% 
++\sqrt{\kmin} \sqrt{k+\kmin} \Bigg(9 \left(-15 k^4+10  \kmin k^3+248 \kmin^2 k^2+336 \kmin^3 k+128
+\kmin^4\right) \eta ^4 \\
+-3840 i \kmin (k+\kmin)^2 \eta ^3-80 \left(69 k^2+178 \kmin k+184 \kmin^2\right)\eta^2 \\
+-400 \beta ^2 \left(\left(3 k^2+14 \kmin k+8 \kmin^2\right) \eta ^2-48 i(k+\kmin)
+   \eta -72\right) \eta ^2 \\
++19200 i (k+\kmin) \eta +320 \beta  \Bigg[-12 i \kmin
+   (k+\kmin)^2 \eta ^3-\left(21 k^2+62 \kmin k+56 \kmin^2\right) \eta ^2 \\
++120 i(k+\kmin) \eta +180\Bigg] \eta +28800\Bigg) \displaybreak[0]\\
+% 
+-\sqrt{(k-\kmin) \kmin} \Bigg(-9\left(15
+   k^4+10 \kmin k^3-248 \kmin^2 k^2+336 \kmin^3 k-128 \kmin^4\right) \eta^4 \\
++60 i \left(15 k^3-54 \kmin k^2+8 \kmin^2 k+16 \kmin^3\right) \eta ^3
+-80 \left(39k^2-38  \kmin k+104 \kmin^2\right) \eta ^2 \\
++400 \beta ^2 \left(\left(3 k^2-14 \kmin k+8 \kmin^2\right) \eta ^2+12 i (k+2 \kmin) \eta
++72\right) \eta ^2 \\
++4800 i (k+2 \kmin) \eta +20 i \beta  \Bigg[3 \left(15 k^3-54 \kmin k^2+8 \kmin^2 k+16
+\kmin^3\right) \eta ^3 \\
++32 i \left(3 k^2+4 \kmin k+8 \kmin^2\right) \eta ^2+480 (k+2 \kmin) \eta -2880
+i\Bigg]
+   \eta +28800\Bigg) \displaybreak[0] \\
+% 
++15 k \left(9 \eta ^4 k^4-400 \eta ^2 k^2-320 \beta  \eta 
+\left(\eta ^2
+   k^2-12\right)+80 \beta ^2 \eta ^2 \left(\eta ^2 k^2+24\right)+1920\right) \log \left(2
+\sqrt{k}\right) \\
+-15k \Bigg(9 \eta ^4 k^4-400 \eta ^2 k^2-320 \beta  \eta  \left(\eta ^2 k^2-12\right)\\
++80 \beta ^2\eta ^2 \left(\eta ^2 k^2+24\right)+1920\Bigg) \log \left(2
+   \left(\sqrt{\kmax}+\sqrt{\kmax-k}\right)\right) \\
+-15 k \Bigg(9 \eta ^4 k^4-400 \eta ^2 k^2-320
+   \beta  \eta  \left(\eta ^2 k^2-12\right) \\
++80 \beta ^2 \eta ^2 \left(\eta ^2
+k^2+24\right)+1920\Bigg) \log \left(2 \left(\sqrt{\kmax}+\sqrt{k+\kmax}\right)\right) \\
++15 k \Bigg(9 \eta ^4 k^4-400\eta ^2 k^2-320 \beta  \eta  \left(\eta ^2 k^2-12\right) \\
++80 \beta ^2 \eta ^2 \left(\eta ^2 k^2+24\right)+1920\Bigg) \log \left(2
+   \left(\sqrt{\kmin}+\sqrt{k+\kmin}\right)\right)\Bigg\} \,.
+\end{multline}
+
+
 
 
 
