Added new graphs into bazaar.

--- a/appendix.tex
+++ b/appendix.tex
@@ -700,6 +700,286 @@ k^2+24\right)+1920\Bigg) \log \left(2 \left(\sqrt{\kmax}+\sqrt{k+\kmax}\right)\r
    \left(\sqrt{\kmin}+\sqrt{k+\kmin}\right)\right)\Bigg\} \,.
 \end{multline}
 
+The analytic solution for $J_{\wt{\D}}$ is 
+% 
+\begin{multline}
+J_{\wt{\D}} = 8\pi G \dN{\vp_{0}}\frac{\alpha ^2}{302400\beta ^2\eta ^4 k} 
+\Bigg\{-5040 k \arctan\left(\sqrt{\frac{\kmin}{k-\kmin}}\right) \Bigg(9 \eta ^4 k^4 
++230 \eta ^2 k^2+260 i \eta k\\
++20 \beta ^2 \eta ^2 \left(2 \eta ^2 k^2+13 i \eta  k-12\right) 
++10\beta \eta \left(27 \eta^2 k^2+52 i \eta  k-48\right)-240\Bigg) \displaybreak[0]\\
++2520 k \pi\Bigg(9 \eta ^4 k^4+230 \eta ^2 k^2+260 i \eta  k+20
+\beta ^2\eta ^2 \left(2 \eta ^2 k^2+13 i \eta  k-12\right)\\
++10 \beta  \eta  \left(27 \eta ^2 k^2+52 i\eta k-48\right)-240\Bigg)
++\frac{16\sqrt{k+\kmax}}{\kmax^{3/2}} \Bigg(-35 \eta ^2 \Bigg(111 \eta ^2
+   \kmax^2 \displaybreak[0]\\
++192 i \eta  \kmax+64 \beta  \eta  (3 i \eta  \kmax+1)+64\Bigg) k^4
+-5\eta\Bigg(-294 \eta ^3 \kmax^3-717 i \eta ^2 \kmax^2+2656 \eta  \kmax \\
++960 \beta ^2\eta ^2 (3 \eta  \kmax-i)+\beta  \eta  \left(-717 i \eta ^2 \kmax^2+5536 \eta 
+\kmax-1920 i\right)-960 i\Bigg) k^3 \\
+-6 \left(-588 \eta ^4 \kmax^4+1305 i \eta ^3 \kmax^3+9965
+\eta ^2
+   \kmax^2+15520 i \eta  \kmax+20 \beta ^2 \eta ^2 \left(45 \eta ^2 \kmax^2+776 i
+\eta 
+   \kmax+252\right)+5 \beta  \eta  \left(261 i \eta ^3 \kmax^3+2173 \eta ^2
+\kmax^2+6208 i
+   \eta  \kmax+2016\right)+5040\right) k^2 \\
++4 \kmax \left(84 \eta ^4 \kmax^4-330 i
+\eta ^3
+   \kmax^3-3275 \eta ^2 \kmax^2+7065 i \eta  \kmax-15 \beta ^2 \eta ^2 \left(20
+\eta ^2
+   \kmax^2-471 i \eta  \kmax+1008\right)-5 \beta  \eta  \left(66 i \eta ^3
+\kmax^3+715
+   \eta ^2 \kmax^2-2826 i \eta  \kmax+6048\right)-15120\right) k+8 \kmax^2
+\left(-84 \eta
+   ^4 \kmax^4+330 i \eta ^3 \kmax^3-1450 \eta ^2 \kmax^2+2385 i \eta 
+\kmax+15 \beta
+   ^2 \eta ^2 \left(20 \eta ^2 \kmax^2+159 i \eta  \kmax+378\right)+10 \beta  \eta 
+\left(33 i
+   \eta ^3 \kmax^3-115 \eta ^2 \kmax^2+477 i \eta 
+   \kmax+1134\right)+5670\right)\Bigg)+\frac{16 \sqrt{\kmax-k}
+\left(35
+   \eta ^2 \left(111 \eta ^2 \kmax^2+192 i \eta  \kmax+64 \beta  \eta  (3 i \eta 
+   \kmax+1)+64\right) k^4+5 \eta  \left(294 \eta ^3 \kmax^3+717 i \eta ^2
+\kmax^2-2656
+   \eta  \kmax-960 \beta ^2 \eta ^2 (3 \eta  \kmax-i)+i \beta  \eta  \left(717 \eta ^2
+   \kmax^2+5536 i \eta  \kmax+1920\right)+960 i\right) k^3+6 \left(-588 \eta ^4
+   \kmax^4+1305 i \eta ^3 \kmax^3+9965 \eta ^2 \kmax^2+15520 i \eta 
+\kmax+20 \beta
+   ^2 \eta ^2 \left(45 \eta ^2 \kmax^2+776 i \eta  \kmax+252\right)+5 \beta  \eta 
+\left(261 i
+   \eta ^3 \kmax^3+2173 \eta ^2 \kmax^2+6208 i \eta  \kmax+2016\right)+5040\right)
+k^2+4
+   \kmax \left(84 \eta ^4 \kmax^4-330 i \eta ^3 \kmax^3-3275 \eta ^2
+\kmax^2+7065 i
+   \eta  \kmax-15 \beta ^2 \eta ^2 \left(20 \eta ^2 \kmax^2-471 i \eta 
+   \kmax+1008\right)-5 \beta  \eta  \left(66 i \eta ^3 \kmax^3+715 \eta ^2
+\kmax^2-2826 i
+   \eta  \kmax+6048\right)-15120\right) k-8 \kmax^2 \left(-84 \eta ^4 \kmax^4+330
+i \eta
+   ^3 \kmax^3-1450 \eta ^2 \kmax^2+2385 i \eta  \kmax+15 \beta ^2 \eta ^2 \left(20
+\eta ^2
+   \kmax^2+159 i \eta  \kmax+378\right)+10 \beta  \eta  \left(33 i \eta ^3
+\kmax^3-115
+   \eta ^2 \kmax^2+477 i \eta 
+\kmax+1134\right)+5670\right)\right)}{\kmax^{3/2}}+\frac{16
+   \sqrt{k+\kmin} \left(35 \eta ^2 \left(111 \eta ^2 \kmin^2+192 i \eta  \kmin+64
+\beta 
+   \eta  (3 i \eta  \kmin+1)+64\right) k^4-5 \eta  \left(294 \eta ^3 \kmin^3+717 i \eta
+^2
+   \kmin^2-2656 \eta  \kmin-960 \beta ^2 \eta ^2 (3 \eta  \kmin-i)+i \beta  \eta 
+   \left(717 \eta ^2 \kmin^2+5536 i \eta  \kmin+1920\right)+960 i\right) k^3+6
+\left(-588 \eta
+   ^4 \kmin^4+1305 i \eta ^3 \kmin^3+9965 \eta ^2 \kmin^2+15520 i \eta 
+\kmin+20
+   \beta ^2 \eta ^2 \left(45 \eta ^2 \kmin^2+776 i \eta  \kmin+252\right)+5 \beta  \eta 
+   \left(261 i \eta ^3 \kmin^3+2173 \eta ^2 \kmin^2+6208 i \eta 
+   \kmin+2016\right)+5040\right) k^2-4 \kmin \left(84 \eta ^4 \kmin^4-330 i \eta
+^3
+   \kmin^3-3275 \eta ^2 \kmin^2+7065 i \eta  \kmin-15 \beta ^2 \eta ^2 \left(20
+\eta ^2
+   \kmin^2-471 i \eta  \kmin+1008\right)-5 \beta  \eta  \left(66 i \eta ^3
+\kmin^3+715
+   \eta ^2 \kmin^2-2826 i \eta  \kmin+6048\right)-15120\right) k-8 \kmin^2
+\left(-84 \eta
+   ^4 \kmin^4+330 i \eta ^3 \kmin^3-1450 \eta ^2 \kmin^2+2385 i \eta 
+\kmin+15 \beta
+   ^2 \eta ^2 \left(20 \eta ^2 \kmin^2+159 i \eta  \kmin+378\right)+10 \beta  \eta 
+\left(33 i
+   \eta ^3 \kmin^3-115 \eta ^2 \kmin^2+477 i \eta 
+   \kmin+1134\right)+5670\right)\right)}{\kmin^{3/2}}-\frac{16 \sqrt{k-\kmin}
+\left(35
+   \eta ^2 \left(111 \eta ^2 \kmin^2+192 i \eta  \kmin+64 \beta  \eta  (3 i \eta 
+   \kmin+1)+64\right) k^4+10 \eta  \left(147 \eta ^3 \kmin^3-1104 i \eta ^2
+\kmin^2+1552
+   \eta  \kmin+480 \beta ^2 \eta ^2 (3 \eta  \kmin-i)+16 \beta  \eta  \left(-69 i \eta
+^2
+   \kmin^2+187 \eta  \kmin-60 i\right)-480 i\right) k^3+6 \left(-588 \eta ^4
+\kmin^4+480 i
+   \eta ^3 \kmin^3+8165 \eta ^2 \kmin^2+14720 i \eta  \kmin-20 \beta ^2 \eta ^2
+\left(45
+   \eta ^2 \kmin^2-736 i \eta  \kmin-252\right)+5 \beta  \eta  \left(96 i \eta ^3
+   \kmin^3+1453 \eta ^2 \kmin^2+5888 i \eta  \kmin+2016\right)+5040\right) k^2+4
+   \kmin \left(84 \eta ^4 \kmin^4+120 i \eta ^3 \kmin^3-2675 \eta ^2
+\kmin^2+6165 i
+   \eta  \kmin+15 \beta ^2 \eta ^2 \left(20 \eta ^2 \kmin^2+411 i \eta 
+   \kmin-1008\right)+5 i \beta  \eta  \left(24 \eta ^3 \kmin^3+475 i \eta ^2
+\kmin^2+2466
+   \eta  \kmin+6048 i\right)-15120\right) k+8 \kmin^2 \left(84 \eta ^4 \kmin^4+120
+i \eta
+   ^3 \kmin^3+2050 \eta ^2 \kmin^2-3285 i \eta  \kmin+15 \beta ^2 \eta ^2 \left(20
+\eta ^2
+   \kmin^2-219 i \eta  \kmin-378\right)+10 \beta  \eta  \left(12 i \eta ^3
+\kmin^3+235
+   \eta ^2 \kmin^2-657 i \eta 
+\kmin-1134\right)-5670\right)\right)}{\kmin^{3/2}}-5040 k
+   \left(-9 \eta ^4 k^4-45 i \eta ^3 k^3-150 \eta ^2 k^2-340 i \eta  k+20 \beta ^2 \eta ^2 \left(2
+\eta ^2
+   k^2-17 i \eta  k+12\right)+5 \beta  \eta  \left(-9 i \eta ^3 k^3-22 \eta ^2 k^2-136 i \eta 
+   k+96\right)+240\right) \log \left(2 \sqrt{k}\right)+5040 k \left(-9 \eta ^4 k^4-45 i \eta ^3
+k^3-150 \eta
+   ^2 k^2-340 i \eta  k+20 \beta ^2 \eta ^2 \left(2 \eta ^2 k^2-17 i \eta  k+12\right)+5 \beta 
+\eta 
+   \left(-9 i \eta ^3 k^3-22 \eta ^2 k^2-136 i \eta  k+96\right)+240\right) \log \left(2
+   \left(\sqrt{\kmax}+\sqrt{\kmax-k}\right)\right)+5040 k \left(-9 \eta ^4 k^4+45 i \eta
+^3
+   k^3-150 \eta ^2 k^2+340 i \eta  k+20 \beta ^2 \eta ^2 \left(2 \eta ^2 k^2+17 i \eta 
+k+12\right)+5 \beta 
+   \eta  \left(9 i \eta ^3 k^3-22 \eta ^2 k^2+136 i \eta  k+96\right)+240\right) \log \left(2
+   \left(\sqrt{\kmax}+\sqrt{k+\kmax}\right)\right)-5040 k \left(-9 \eta ^4 k^4+45 i \eta
+^3
+   k^3-150 \eta ^2 k^2+340 i \eta  k+20 \beta ^2 \eta ^2 \left(2 \eta ^2 k^2+17 i \eta 
+k+12\right)+5 \beta 
+   \eta  \left(9 i \eta ^3 k^3-22 \eta ^2 k^2+136 i \eta  k+96\right)+240\right) \log \left(2
+   \left(\sqrt{\kmin}+\sqrt{k+\kmin}\right)\right)\Bigg\}
+% 
+\end{multline}
+
+\begin{multline}
+ +\frac{\text{C7}\alpha ^2}{604800
+\beta ^2
+   \eta ^4 k^2} \Bigg\{315 \left(-9 \eta ^4 k^4+60 i \eta ^3 k^3-130 \eta ^2 k^2+300 i \eta  k+20
+\beta ^2
+   \eta ^2 \left(4 \eta ^2 k^2+15 i \eta  k+120\right)+10 \beta  \eta  \left(6 i \eta ^3 k^3-5 \eta
+^2
+   k^2+60 i \eta  k+480\right)+2400\right) \tan
+^{-1}\left(\sqrt{\frac{\kmin}{k-\kmin}}\right)
+   k^3+315 \left(9 \eta ^4 k^4+10 i \eta ^3 k^3+290 \eta ^2 k^2-1020 i \eta  k+20 \beta ^2 \eta ^2
+\left(4
+   \eta ^2 k^2-51 i \eta  k-120\right)+10 \beta  \eta  \left(i \eta ^3 k^3+37 \eta ^2 k^2-204 i
+\eta 
+   k-480\right)-2400\right) \log \left(2 \sqrt{k}\right) k^3-315 \left(9 \eta ^4 k^4+10 i \eta ^3
+k^3+290
+   \eta ^2 k^2-1020 i \eta  k+20 \beta ^2 \eta ^2 \left(4 \eta ^2 k^2-51 i \eta  k-120\right)+10
+\beta  \eta
+    \left(i \eta ^3 k^3+37 \eta ^2 k^2-204 i \eta  k-480\right)-2400\right) \log \left(2
+   \left(\sqrt{\kmax}+\sqrt{\kmax-k}\right)\right) k^3 \\
+-315 \left(9 \eta ^4 k^4-10 i \eta
+^3
+   k^3+290 \eta ^2 k^2+1020 i \eta  k+20 \beta ^2 \eta ^2 \left(4 \eta ^2 k^2+51 i \eta 
+k-120\right)+10
+   \beta  \eta  \left(-i \eta ^3 k^3+37 \eta ^2 k^2+204 i \eta  k-480\right)-2400\right) \log
+\left(2
+   \left(\sqrt{\kmax}+\sqrt{k+\kmax}\right)\right) k^3+315 \left(9 \eta ^4 k^4-10 i \eta
+^3
+   k^3+290 \eta ^2 k^2+1020 i \eta  k+20 \beta ^2 \eta ^2 \left(4 \eta ^2 k^2+51 i \eta 
+k-120\right)+10
+   \beta  \eta  \left(-i \eta ^3 k^3+37 \eta ^2 k^2+204 i \eta  k-480\right)-2400\right) \log
+\left(2
+   \left(\sqrt{\kmin}+\sqrt{k+\kmin}\right)\right) k^3 \\
+-\frac{315}{2} \left(-9 \eta ^4
+k^4+60 i
+   \eta ^3 k^3-130 \eta ^2 k^2+300 i \eta  k+20 \beta ^2 \eta ^2 \left(4 \eta ^2 k^2+15 i \eta 
+   k+120\right)+10 \beta  \eta  \left(6 i \eta ^3 k^3-5 \eta ^2 k^2+60 i \eta 
+k+480\right)+2400\right) \pi 
+   k^3+\sqrt{\kmax} \sqrt{k+\kmax} \left(2835 \eta ^4 k^6-630 i \eta ^3 (5 \beta  \eta
+-3 i
+   \kmax \eta +5) k^5+14 \eta ^2 \left(1800 \beta ^2 \eta ^2-1428 \kmax^2 \eta ^2+2710 i
+   \kmax \eta +5 \beta  (542 i \eta  \kmax+3201) \eta +14205\right) k^4+4 \eta 
+\left(2364 \eta
+   ^3 \kmax^3+6620 i \eta ^2 \kmax^2-9465 \eta  \kmax+75 \beta ^2 \eta ^2 (200
+\eta 
+   \kmax+303 i)+5 \beta  \eta  \left(1324 i \eta ^2 \kmax^2+1107 \eta  \kmax+9090
+   i\right)+22725 i\right) k^3-24 \left(-1392 \eta ^4 \kmax^4+2500 i \eta ^3
+\kmax^3+13010 \eta
+   ^2 \kmax^2-16035 i \eta  \kmax+5 \beta ^2 \eta ^2 \left(208 \eta ^2
+\kmax^2-3207 i \eta
+    \kmax-5796\right)+10 \beta  \eta  \left(250 i \eta ^3 \kmax^3+1405 \eta ^2
+   \kmax^2-3207 i \eta  \kmax-5796\right)-28980\right) k^2+160 \kmax \left(24 \eta
+^4
+   \kmax^4-88 i \eta ^3 \kmax^3-597 \eta ^2 \kmax^2+783 i \eta  \kmax-9
+\beta ^2
+   \eta ^2 \left(8 \eta ^2 \kmax^2-87 i \eta  \kmax-126\right)+\beta  \eta  \left(-88 i
+\eta ^3
+   \kmax^3-669 \eta ^2 \kmax^2+1566 i \eta  \kmax+2268\right)+1134\right) k+320
+   \kmax^2 \left(-24 \eta ^4 \kmax^4+88 i \eta ^3 \kmax^3-348 \eta ^2
+\kmax^2+477 i
+   \eta  \kmax+9 \beta ^2 \eta ^2 \left(8 \eta ^2 \kmax^2+53 i \eta 
+\kmax+84\right)+2
+   \beta  \eta  \left(44 i \eta ^3 \kmax^3-138 \eta ^2 \kmax^2+477 i \eta 
+   \kmax+756\right)+756\right)\right)+\sqrt{\kmax} \sqrt{\kmax-k} \left(-2835 \eta
+^4
+   k^6-630 \eta ^3 (5 i \beta  \eta +3 \kmax \eta +5 i) k^5-14 \eta ^2 \left(1800 \beta ^2
+\eta
+   ^2-1428 \kmax^2 \eta ^2+2710 i \kmax \eta +5 \beta  (542 i \eta  \kmax+3201)
+\eta
+   +14205\right) k^4+4 \eta  \left(2364 \eta ^3 \kmax^3+6620 i \eta ^2 \kmax^2-9465
+\eta 
+   \kmax+75 \beta ^2 \eta ^2 (200 \eta  \kmax+303 i)+5 \beta  \eta  \left(1324 i \eta ^2
+   \kmax^2+1107 \eta  \kmax+9090 i\right)+22725 i\right) k^3+24 \left(-1392 \eta ^4
+   \kmax^4+2500 i \eta ^3 \kmax^3+13010 \eta ^2 \kmax^2-16035 i \eta 
+\kmax+5 \beta
+   ^2 \eta ^2 \left(208 \eta ^2 \kmax^2-3207 i \eta  \kmax-5796\right)+10 \beta  \eta 
+\left(250
+   i \eta ^3 \kmax^3+1405 \eta ^2 \kmax^2-3207 i \eta 
+\kmax-5796\right)-28980\right)
+   k^2+160 \kmax \left(24 \eta ^4 \kmax^4-88 i \eta ^3 \kmax^3-597 \eta ^2
+   \kmax^2+783 i \eta  \kmax-9 \beta ^2 \eta ^2 \left(8 \eta ^2 \kmax^2-87 i \eta 
+   \kmax-126\right)+\beta  \eta  \left(-88 i \eta ^3 \kmax^3-669 \eta ^2
+\kmax^2+1566 i
+   \eta  \kmax+2268\right)+1134\right) k-320 \kmax^2 \left(-24 \eta ^4 \kmax^4+88
+i \eta
+   ^3 \kmax^3-348 \eta ^2 \kmax^2+477 i \eta  \kmax+9 \beta ^2 \eta ^2 \left(8
+\eta ^2
+   \kmax^2+53 i \eta  \kmax+84\right)+2 \beta  \eta  \left(44 i \eta ^3
+\kmax^3-138 \eta
+   ^2 \kmax^2+477 i \eta  \kmax+756\right)+756\right)\right)-\sqrt{k-\kmin}
+   \sqrt{\kmin} \left(-2835 \eta ^4 k^6+1890 i \eta ^3 (10 \beta  \eta +i \kmin \eta
++10) k^5+14
+   \eta ^2 \left(1800 \beta ^2 \eta ^2+1428 \kmin^2 \eta ^2-1660 i \kmin \eta +5 \beta 
+(-332 i
+   \eta  \kmin-1761) \eta -10605\right) k^4-4 \eta  \left(-2364 \eta ^3 \kmin^3+13480 i
+\eta ^2
+   \kmin^2+39465 \eta  \kmin+75 \beta ^2 \eta ^2 (200 \eta  \kmin-1083 i)+5 \beta 
+\eta 
+   \left(2696 i \eta ^2 \kmin^2+10893 \eta  \kmin-32490 i\right)-81225 i\right) k^3-24
+   \left(1392 \eta ^4 \kmin^4-1000 i \eta ^3 \kmin^3-10930 \eta ^2 \kmin^2+12735 i
+\eta 
+   \kmin+5 \beta ^2 \eta ^2 \left(208 \eta ^2 \kmin^2+2547 i \eta 
+\kmin+5796\right)+10
+   \beta  \eta  \left(-100 i \eta ^3 \kmin^3-989 \eta ^2 \kmin^2+2547 i \eta 
+   \kmin+5796\right)+28980\right) k^2+160 \kmin \left(24 \eta ^4 \kmin^4+32 i \eta
+^3
+   \kmin^3-453 \eta ^2 \kmin^2+603 i \eta  \kmin+9 \beta ^2 \eta ^2 \left(8 \eta
+^2
+   \kmin^2+67 i \eta  \kmin+126\right)+\beta  \eta  \left(32 i \eta ^3 \kmin^3-381
+\eta ^2
+   \kmin^2+1206 i \eta  \kmin+2268\right)+1134\right) k+320 \kmin^2 \left(24 \eta
+^4
+   \kmin^4+32 i \eta ^3 \kmin^3+492 \eta ^2 \kmin^2-657 i \eta  \kmin+9
+\beta ^2
+   \eta ^2 \left(8 \eta ^2 \kmin^2-73 i \eta  \kmin-84\right)+2 \beta  \eta  \left(16 i
+\eta ^3
+   \kmin^3+282 \eta ^2 \kmin^2-657 i \eta 
+   \kmin-756\right)-756\right)\right)+\sqrt{\kmin} \sqrt{k+\kmin} \left(-2835 \eta
+^4
+   k^6+630 \eta ^3 (5 i \beta  \eta +3 \kmin \eta +5 i) k^5-14 \eta ^2 \left(1800 \beta ^2
+\eta
+   ^2-1428 \kmin^2 \eta ^2+2710 i \kmin \eta +5 \beta  (542 i \eta  \kmin+3201)
+\eta
+   +14205\right) k^4-4 \eta  \left(2364 \eta ^3 \kmin^3+6620 i \eta ^2 \kmin^2-9465
+\eta 
+   \kmin+75 \beta ^2 \eta ^2 (200 \eta  \kmin+303 i)+5 \beta  \eta  \left(1324 i \eta ^2
+   \kmin^2+1107 \eta  \kmin+9090 i\right)+22725 i\right) k^3+24 \left(-1392 \eta ^4
+   \kmin^4+2500 i \eta ^3 \kmin^3+13010 \eta ^2 \kmin^2-16035 i \eta 
+\kmin+5 \beta
+   ^2 \eta ^2 \left(208 \eta ^2 \kmin^2-3207 i \eta  \kmin-5796\right)+10 \beta  \eta 
+\left(250
+   i \eta ^3 \kmin^3+1405 \eta ^2 \kmin^2-3207 i \eta 
+\kmin-5796\right)-28980\right)
+   k^2-160 \kmin \left(24 \eta ^4 \kmin^4-88 i \eta ^3 \kmin^3-597 \eta ^2
+   \kmin^2+783 i \eta  \kmin-9 \beta ^2 \eta ^2 \left(8 \eta ^2 \kmin^2-87 i \eta 
+   \kmin-126\right)+\beta  \eta  \left(-88 i \eta ^3 \kmin^3-669 \eta ^2
+\kmin^2+1566 i
+   \eta  \kmin+2268\right)+1134\right) k-320 \kmin^2 \left(-24 \eta ^4 \kmin^4+88
+i \eta
+   ^3 \kmin^3-348 \eta ^2 \kmin^2+477 i \eta  \kmin+9 \beta ^2 \eta ^2 \left(8
+\eta ^2
+   \kmin^2+53 i \eta  \kmin+84\right)+2 \beta  \eta  \left(44 i \eta ^3
+\kmin^3-138 \eta
+   ^2 \kmin^2+477 i \eta  \kmin+756\right)+756\right)\right)\Bigg\} 
+%
+\end{multline}
 
 
 
